log
Thu 16 May 2024 08:06:25 PM UTC: 
 tests:  0|5
total_score: 0/70
a0e1e62
Thu 16 May 2024 08:25:36 PM UTC: 
 sudoku.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:59:26: error: statement with no effect [-Werror=unused-value]
   59 |                n->sudo[i][k];
      |                ~~~~~~~~~~^~~
cc1: all warnings being treated as errors
Compilation failed
2c025a2
Thu 16 May 2024 08:26:50 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
d9aba1b
Thu 16 May 2024 08:29:12 PM UTC: 
 sudoku.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  3|3
total_score: 25/70
b7267d8
Thu 16 May 2024 08:33:23 PM UTC: 
 sudoku.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:91:17: error: void value not ignored as it ought to be
   91 |       Node* n = pop(s);
      |                 ^~~
sudoku.c:97:1: error: control reaches end of non-void function [-Werror=return-type]
   97 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
a3691e4
Thu 16 May 2024 08:33:33 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:97:1: error: control reaches end of non-void function [-Werror=return-type]
   97 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
ef0616f
Thu 16 May 2024 08:35:20 PM UTC: 
 sudoku.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:91:17: error: void value not ignored as it ought to be
   91 |       Node* n = pop(s);
      |                 ^~~
Compilation failed
6c224a9
Thu 16 May 2024 08:37:12 PM UTC: 
 sudoku.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:91:17: error: implicit declaration of function ‘get’; did you mean ‘getw’? [-Werror=implicit-function-declaration]
   91 |       Node* n = get(s, s->size - 1);
      |                 ^~~
      |                 getw
sudoku.c:91:25: error: invalid use of incomplete typedef ‘List’
   91 |       Node* n = get(s, s->size - 1);
      |                         ^~
cc1: all warnings being treated as errors
Compilation failed
aa20bc7
Thu 16 May 2024 08:41:00 PM UTC: 
 sudoku.c | 22 +++++++++-------------
 1 file changed, 9 insertions(+), 13 deletions(-)
 tests:  4|3
total_score: 30/70
1e57746
Thu 16 May 2024 08:44:30 PM UTC: 
 sudoku.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  4|3
total_score: 30/70
65f5b65
Thu 16 May 2024 08:48:02 PM UTC: 
 sudoku.c | 5 -----
 1 file changed, 5 deletions(-)
 tests:  4|3
total_score: 30/70
502ea48
Thu 16 May 2024 08:50:21 PM UTC: 
 sudoku.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:100:29: error: ‘Node’ has no member named ‘i’
  100 |             if (!visited[aux->i][aux->j]) { // Verificar si el nodo no ha sido visitado
      |                             ^~
sudoku.c:100:37: error: ‘Node’ has no member named ‘j’
  100 |             if (!visited[aux->i][aux->j]) { // Verificar si el nodo no ha sido visitado
      |                                     ^~
sudoku.c:102:28: error: ‘Node’ has no member named ‘i’
  102 |                 visited[aux->i][aux->j] = 1; // Marcar el nodo como visitado
      |                            ^~
sudoku.c:102:36: error: ‘Node’ has no member named ‘j’
  102 |                 visited[aux->i][aux->j] = 1; // Marcar el nodo como visitado
      |                                    ^~
sudoku.c:88:9: error: variable ‘visited’ set but not used [-Werror=unused-but-set-variable]
   88 |     int visited[9][9] = {0}; // Inicializar matriz de visitados
      |         ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
b0106d5
Thu 16 May 2024 08:56:59 PM UTC: 
 sudoku.c | 27 ++++++++++++++-------------
 1 file changed, 14 insertions(+), 13 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:105:7: error: value computed is not used [-Werror=unused-value]
  105 |       *cont++;
      |       ^~~~~~~
sudoku.c:106:7: error: implicit declaration of function ‘freeList’; did you mean ‘createList’? [-Werror=implicit-function-declaration]
  106 |       freeList(adj);
      |       ^~~~~~~~
      |       createList
cc1: all warnings being treated as errors
Compilation failed
c3c05b7
